<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="SharedContextComPublish" Id="{60aa59be-fb66-4e61-9e8b-b545b7efc5ab}">
    <Declaration><![CDATA[TYPE SharedContextComPublish :
STRUCT
  Region1 : ZApplication.RegionComPublish;
  Region2 : ZApplication.RegionComPublish;
  Region3 : ZApplication.RegionComPublish;
  Region4 : ZApplication.RegionComPublish;
  Region5 : ZApplication.RegionComPublish;
  Region6 : ZApplication.RegionComPublish;
  Region7 : ZApplication.RegionComPublish;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>